CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE_INDIV__c.object
<CustomObject>
   <!---->
    <description>Associator of cases and clients</description>
     <!--<enableChangeDataCapture>false</enableChangeDataCapture>-->
    <fields>
        <fullName>DTE_BEGIN_EFFV__c</fullName>
        <description>Effective Begin Date</description>
        <label>Date Person Entered Home</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV__c</fullName>
        <description>Effective End Date</description>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_CASE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case ID</description>
        <label>Case ID</label>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>Case Individual</relationshipLabel>
        <relationshipName>CaseIndividuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_CLIENT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Client ID</description>
        <label>Client ID</label>
        <referenceTo>T_SBSD_INDIV__c</referenceTo>
        <relationshipLabel>Case Individual</relationshipLabel>
        <relationshipName>Case_Individual</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Case Individual ID External</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IDN_STATE__c</fullName>
        <formula>IDN_CLIENT__r.IDN_STATE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>IDN_CLIENT__r.NAM_FIRST__c</formula>
        <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>IDN_CLIENT__r.NAM_LAST__c</formula>
        <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    	<fields>
        <fullName>Age__c</fullName>
        <formula>IDN_CLIENT__r.Age__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <formula>CASE(IDN_CLIENT__r.CDE_GENDER__c,&quot;1&quot;,&quot;MALE&quot;,&quot;2&quot;,&quot;FEMALE&quot;,&quot;3&quot;,&quot;UNKNOWN&quot;,&quot;4&quot;,&quot;UNKNOWN&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_CRTKR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the Primary Parent/Caretaker</description>
        <label>Primary Parent/Caretaker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Individual_Status__c</fullName>
        <description>CCCAP-13633</description>
        <label>Individual Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
            <value>
                <fullName>PC</fullName>
                <label>Primary Caretaker</label>
            </value>
            <value>
                <fullName>AC</fullName>
                <label>Additional Caretaker</label>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Individual_Data_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Individual Data Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NAM_INDIV__c</fullName>
        <formula>IDN_CLIENT__r.NAM_LAST__c &amp; &quot;, &quot; &amp; IDN_CLIENT__r.NAM_FIRST__c &amp; &quot; &quot; &amp; IDN_CLIENT__r.NAM_MI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_COUNTY__c</fullName>
        <formula>IDN_CASE__r.CDE_COUNTY__c</formula>
        <label>code county</label>
        <type>Text</type>
    </fields>
    <label>Case Individual</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Individual_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
     <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Case Individual ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Individual</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Dte_Begin_Effv_cannot_be_lt_DOB_INDV</fullName>
        <active>true</active>
        <description>CHAT-1204: Can&apos;t be before DTE_DOB on T_SBSD_INDIV</description>
        <errorConditionFormula>AND(NOT(IDN_CLIENT__r.Is_Peak_Data__c), NOT(IDN_CLIENT__r.Is_CBMS_Data__c),NOT(ISBLANK( IDN_CLIENT__c  )),
     NOT(ISBLANK(IDN_CLIENT__r.DTE_DOB__c )),
     DTE_BEGIN_EFFV__c &lt;  IDN_CLIENT__r.DTE_DOB__c 
)</errorConditionFormula>
        <errorDisplayField>DTE_BEGIN_EFFV__c</errorDisplayField>
        <errorMessage>Effective Begin Date cannot be less than DOB of Individual</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dte_End_Effv_not_before_Dte_Begin_Effv</fullName>
        <active>true</active>
        <description>DTE_END_EFFV__c  cannot be before DTE_BEGIN_EFFV__c</description>
        <errorConditionFormula>NOT(IDN_CLIENT__r.Is_Peak_Data__c) &amp;&amp; NOT(IDN_CLIENT__r.Is_CBMS_Data__c) &amp;&amp; DTE_END_EFFV__c &lt;  DTE_BEGIN_EFFV__c</errorConditionFormula>
        <errorDisplayField>DTE_END_EFFV__c</errorDisplayField>
        <errorMessage>Effective End Date cannot be less than Date Person Entered Home</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Effv_Beg_Date_cannot_be_in_future</fullName>
        <active>true</active>
        <description>CHAT- 1204: Cant be after current system Date</description>
        <errorConditionFormula>NOT(IDN_CLIENT__r.Is_Peak_Data__c) &amp;&amp; NOT(IDN_CLIENT__r.Is_CBMS_Data__c) &amp;&amp; DTE_BEGIN_EFFV__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>DTE_BEGIN_EFFV__c</errorDisplayField>
        <errorMessage>Effective begin Date cannot be greater than Current System Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dte_Begin_Effv_cannot_be_updated</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(IDN_CLIENT__r.Is_Peak_Data__c),NOT(IDN_CLIENT__r.Is_CBMS_Data__c),
NOT( ISNEW() ),
ISCHANGED(  DTE_BEGIN_EFFV__c  )
)</errorConditionFormula>
        <errorDisplayField>DTE_BEGIN_EFFV__c</errorDisplayField>
        <errorMessage>Date Person Entered Home can not be updated once record is created.</errorMessage>
    </validationRules>
</CustomObject>