CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE_INDIV__c/validationRules/Dte_Begin_Effv_cannot_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Dte_Begin_Effv_cannot_be_null</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(IDN_CLIENT__r.Is_Peak_Data__c), 
ISNEW() , 
ISNULL( DTE_BEGIN_EFFV__c ) 
)</errorConditionFormula>
    <errorDisplayField>DTE_BEGIN_EFFV__c</errorDisplayField>
    <errorMessage>Date Person Entered Home cannot be blank.</errorMessage>
</ValidationRule>