CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE_INDIV__c/validationRules/Dte_Begin_Effv_cannot_be_updated.validationRule-meta.xml
<ValidationRule>
    <fullName>Dte_Begin_Effv_cannot_be_updated</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(IDN_CLIENT__r.Is_Peak_Data__c),NOT(IDN_CLIENT__r.Is_CBMS_Data__c),
NOT( ISNEW() ),
ISCHANGED(  DTE_BEGIN_EFFV__c  )
)</errorConditionFormula>
    <errorDisplayField>DTE_BEGIN_EFFV__c</errorDisplayField>
    <errorMessage>Date Person Entered Home can not be updated once record is created.</errorMessage>
</ValidationRule>