CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE_INDIV__c/validationRules/Effv_Beg_Date_cannot_be_in_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Effv_Beg_Date_cannot_be_in_future</fullName>
    <active>true</active>
    <description>CHAT- 1204: Cant be after current system Date</description>
    <errorConditionFormula>NOT(IDN_CLIENT__r.Is_Peak_Data__c) &amp;&amp; NOT(IDN_CLIENT__r.Is_CBMS_Data__c) &amp;&amp; DTE_BEGIN_EFFV__c &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>DTE_BEGIN_EFFV__c</errorDisplayField>
    <errorMessage>Effective begin Date cannot be greater than Current System Date</errorMessage>
</ValidationRule>