CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE_INDIV__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Individual_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>